Sable Compatibility (Flooweur)
* feat: added sable integration

* fix: targeting error + build failure fix

* fix: cleaned code

* fix: small fixes

* fix: mailbox detection range for contraptions

* Filter mailbox positions before getting blockEntity to prevent BE loading and unloading.

* Fix Mailbox address uniquifying when the block is moved to/from sublevel.

---------

Co-authored-by: mortuusars <mortuusars@gmail.com>